# Kaz-Offline-Arena

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  Test shit.ipynb  eda.ipynb  elo.py  inference.py  inference_custom.py  judge.py  main.py  pyproject.toml  requirements.txt  run_inference.sh
