[tool.poetry]
name = "kazofflinearena"
version = "0.1.0"
description = ""
authors = ["Kirill Yakunin <yakunin.k@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.7.0"
pandas = "^2.2.3"
transformers = "^4.49.0"
torch = "^2.6.0"
openai = "^1.64.0"
tenacity = "^9.0.0"
pydantic = "^2.10.6"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"
protobuf = "^6.30.0"
torchvision = "^0.21.0"
gguf = "^0.10.0"
numpy = "<2.0"
accelerate = "^1.5.2"
peft = "^0.15.0"
bitsandbytes = "^0.45.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
